sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  ecart = getNombreValeurs() / 2
  while (ecart > 0) {
    for (i <- 1 to getNombreValeurs() - 1) {
      var v:Int = getValeur(i)
      var j:Int = i

      while (j > 0 && plusPetit(i - ecart, i) {
        setValeur(j, getValeur(j - 1))
        j -= 1
      }
      setValeur(j, v)
    }
  }
}